2016-02-01  Youri Hoogstrate
	* v1.3.1
	  - Added a variable to the output indicating the number of used Segment(Loop)s in the structure
	  - Set infinity to the maximum size of a float
	  - Changes to the energy / parameters estimation utilities

2016-01-22  Youri Hoogstrate
	* v1.3.0
	  - Traceback algorithm rewritten (sparser, faster)
	    * Removal of 4 other matrices
	    * Setting values in the Traceback matrix also required changes to V() and W()
	  - Solved issue in w()
	  - Improved recusion of V() and W()
	  - Solved all -Wconversion and other warnings/errors which are now strictly checked in DEBUG mode and by travis
	  - Replaced min()-macro for std::min()
	  - Replaced std::atof(str.c_str()) for std::stof()
	  - Moved certain checks that should never happen to DEBUG mode only to make RELEASE faster
	  - Reading from file streams will terminate if an error occurs

2016-01-20  Youri Hoogstrate
	* v1.2.1
	  - Pairing object: reduced memory footprint and small speed improvement

2015-12-09  Youri Hoogstrate
	 - Code cleanup
	 - Removal of functions that did not make use of Pair objects

2015-12-07  Youri Hoogstrate
	* v1.2.0
	  - Full support for SegmentLoops
	  - Fixes a XML bug (if <segments /> or <segmentloops /> is missing
	  - SegmentLoopTree works + passing test cases
	  - Using universal traceback mechanism for SegmentLoops and Segments

2015-12-04  Youri Hoogstrate
	* SegmentLoop object works + passing test case

2015-12-01  Youri Hoogstrate
	* v1.1.0
	  - Fixed a issue that seemed to randomly change data
	  - Solved a bug that allowed w()-type bifurcations to act as a
	    normal loop
	  - Added more strict debug comparions and tests

2015-08-06  Youri Hoogstrate
	* Added separate object for indendent traceback in Segment objects
	* Changed behavior of <bonds> variables
	* Changed traceback

2015-07-23  Youri Hoogstrate
	* Fixed a memory leak and changed organization of ReadSegments
	* Added some tests and improved the energy utility
