@@ -49,11 +49,27 @@ if __name__ == "__main__":
             
             if(len(structure['associated_segments']) > 0):
                 associated_segments = { key:value for key,value in data.segments.items() if key in structure['associated_segments'] }
-                print ">"+segment.name
-                print segment.sequence
                 
-                safe_name = segment.name.replace(" ","").replace("'","").replace('"','').replace('/','').replace('(','').replace(')','').replace(';','')
-                b = BinarySplit(args.segmentation_fold,args.temp_dir+"/segments_"+safe_name+"_",segment.sequence, associated_segments)
-                for transition in b.find_transitions():
-                    print transition['structure_max']+"\t"+transition['structure_min']+"\t"+str(transition['energy'])
-                print
+                if args.randomize > 0:
+                    for i in range(1,args.randomize+1):
+                        print ">"+segment.name+" (shuffle iteration "+str(i)+")"
+                        
+                        segment.sequence = data.shuffle_sequence(segment.sequence, associated_segments)
+                        print segment.sequence
+                        
+                        safe_name = segment.name.replace(" ","").replace("'","").replace('"','').replace('/','').replace('(','').replace(')','').replace(';','')
+                        b = BinarySplit(args.segmentation_fold,args.temp_dir+"/segments_"+safe_name+"_",segment.sequence, associated_segments)
+                        for transition in b.find_transitions():
+                            print transition['structure_max']+"\t"+transition['structure_min']+"\t"+str(transition['energy'])
+                        print
+                else:
+                    print ">"+segment.name
+                    
+                    sequence = data.shuffle_sequence(segment.sequence, associated_segments)
+                    print segment.sequence
+                    
+                    safe_name = segment.name.replace(" ","").replace("'","").replace('"','').replace('/','').replace('(','').replace(')','').replace(';','')
+                    b = BinarySplit(args.segmentation_fold,args.temp_dir+"/segments_"+safe_name+"_",segment.sequence, associated_segments)
+                    for transition in b.find_transitions():
+                        print transition['structure_max']+"\t"+transition['structure_min']+"\t"+str(transition['energy'])
+                    print
