@@ -3,8 +3,6 @@
 """
 @file scripts/energy-estimation/bin/scan-for-segments
 
-@date 2015-07-29
-
 @author Youri Hoogstrate
 
 @section LICENSE
